# myic

./: dis_simulation.7z  mytimer.7z  set2.csv  syn_simulatation_results.7z  syn_simulation.7z
IC/: .ccsproject  .cproject  .project  IC.launch  bonito.h  chargingSimulator.c  coordinatorFind.c  coordinatorFind.h  crc.c  crc.h  distribution.h  find.h  global_func.h  global_vars.h  hash.c  hash.h  lnk_msp430fr5994.cmd  macro.h  main.c  main.h  mypredic.c  mypredic.h  pins.h  public.h  routingRx.c  routingRx.h  routingTx.c  routingTx.h  source_DB.h  spi.c  spi.h  transitionData.c  transitionData.h  uart.c  uart.h  uartHex.c  uartHex.h
beaconing/: beaconing_nrf52840_xxAA_s140_7_2_0.emSession
chargingsets/: cars_5th.csv  washer_1th.csv
copy/: IC.7z
cycle_factors/: 100to500.csv  1to100.csv  1to1000.csv  1to300.csv  1to500.csv  400to500.csv  500to1000.csv  [1,1000].csv  [1,100].csv  [1,300].csv  [1,500].csv  [100,500].csv  [100].csv  [300,500]-back.csv  [300,500].csv  [300,500]_.csv  [300,500]_back.csv  [300].csv  [400,500].csv  [500,1000].csv  [500].csv  _[300,500].csv  back-[300,500].csv  cycle-factor-specify.py  cycle-factor.py  front-[300,500].csv  front_[300,500].csv  plot_cycle_factors.py  static_100.csv  vitual_cycle_factor_box.py  vitual_cycle_factor_cdf.py
data_reduce_performance_analysis/: performance_analysis.py
design_theoritical_analysis/: analysis.py
figures/: figure_fitting.py  figures_nsdi.pptx  figures_nsdi_zoomed_in.pptx  final_pdf_itting.py  pdf_dynamic_fitting.py  pdf_fitting.py  pdfitting.py
latex_pdf_arxiv/: convertor.py  main_arxiv.tex  note.txt
motivation/: boxTrail.py  cars_0th.csv  find_com_order.py  find_com_parameters.py  opt_scale_1_500.csv  opt_scale_501_1000.csv  order_plot.py  parameter_plot.py  real_traces.py  set1.csv  set1_100.csv  set1_2.csv  set1_20.csv  set2.csv  set2_100.csv  set2_20.csv  set_1.csv  set_1_100.csv  set_1_100_2.csv  set_1_2.csv  set_1_20.csv  set_1_50.csv  set_501.csv  set_501_100.csv  set_501_100_2.csv  set_501_2.csv  set_501_20.csv  set_501_50.csv
motivation_paper/: order_plot.py  parameter_plot.py  real_traces.py  set1_50.csv  set2_2.csv  set2_50.csv
msp430fr599x_eusci_spi_standard_master/: .ccsproject  .cproject  .project  crc.c  crc.h  hash.h  lnk_msp430fr5994.cmd  msp430fr599x_eusci_spi_standard_master.c  public.h  random.h  routingRx.c
msp430fr599x_eusci_spi_standard_master.c/: .cproject  .project  dst_DB.h  filedata.h  hash.c  hash.h  msp430fr599x_eusci_spi_standard_master.c  public.h  random.c  random.h  routing.c  routing.h  routingRx.c  routingRx.h  routingTx.c  routingTx.h  source_DB.h  spi_discovery.c  spi_discovery.h  spi_packet.h  transitionData.c  transitionData.h
myIC/: .ccsproject  .cproject  .project  coordinator.c  coordinator.h  coordinatorFind.c  coordinatorList.h  crc.c  crc.h  find.c  find.h  global_func.h  global_vars.h  macro.h  main.c  main.h  mypredic.c  pins.h  random.c  random.h  routingRx.c  routingRx.h  routingTx.c  routingTx.h  spi.c  spi.h  swift.c  uart.c  uart.h  uartHex.c  uartHex.h
mySim_linkedlistReduce/: Makefile
mySim_linkedlistRedue/: Makefile
mySim_ringReduce/: .cproject  Makefile  (+1 more)
nrf5_SDK_for_Mesh_v5.0.0_src/examples/beaconing/: CMakeLists.txt  beaconing_nrf52832_xxAA_s132_7_2_0.emSession  beaconing_nrf52840_xxAA_s140_7_2_0.emProject  beaconing_nrf52840_xxAA_s140_7_2_0.emSession
nrf5_SDK_for_Mesh_v5.0.0_src/examples/beaconing/include/: config_adv_transmition.h  crc.h  define_broadcast_packet.h  m2s.h  public.h  s2m.h  sdk_config.h  spis.h  spis_data.h
nrf5_SDK_for_Mesh_v5.0.0_src/examples/beaconing/src/: crc.c  m2s.c  main.c  s2m.c  spis.c  spis_data.c
(+15899 files in other folders)
